--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ button:active .back > span{
 @supports (transition-timing-function: linear(0, 1)) {
     button:is(:hover, :focus-visible) .back > span{
         transition-duration: 0.25s;
+        background-color: green;
         transition-timing-function: linear(
             0, 0.5007 7.21%, 0.7803 12.29%,
             0.8883 14.93%, 0.9724 17.63%,
